# steve

./: .gitignore  README.md  captain-definition  commands.py  projects.json  pyproject.toml  requirements.txt  servers.json  servers.json.template
.github/: dependabot.yml
