[tool.poetry]
name = "slack-commands"
version = "0.8.0"
description = "A slackbot for your favorite minecraft server!"
authors = ["lukec11 <me@lukec.me>"]

[tool.poetry.dependencies]
python = "^3.8"
slack = "^0.0.2"
slackclient = "^2.6.2"
mcstatus = "^3.1.1"
Flask = "^1.1.2"
simplejson = "^3.17.0"
autopep8 = "^1.5.2"
pylint = "^2.5.2"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
