[tool.poetry]
name = "slack-commands"
version = "0.8.0"
description = "A slackbot for your favorite minecraft server!"
authors = ["lukec11 <me@lukec.me>"]

[tool.poetry.dependencies]
python = "^3.7"
slack = "^0.0.2"
slackclient = "^2.9.1"
mcstatus = "^4.0.0"
Flask = "^1.1.2"
simplejson = "^3.17.2"
autopep8 = "^1.5.4"
pylint = "^2.6.0"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
